# Trade-Simulator

./: .gitignore  CMakeLists.txt  README.md  main.cpp
src/UI/: MainWindow.cpp  SimulatorUI.h
src/models/: AlmgrenChriss.cpp  AlmgrenChriss.h  SlippageModel.cpp  SlippageModel.h
src/orderbook/: OrderBook.cpp  OrderBook.h
src/websocket/: WSClient.cpp  WSClient.h
